--- a/Depo/Depo/Presentation/UserStories/Settings/SetSecurityQuestionViewController/SecretAnswerView.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/SetSecurityQuestionViewController/SecretAnswerView.xib
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="SecretAnswerView" customModule="lifebox" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="SecretAnswerView" customModule="Billo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="385" height="86"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -29,7 +30,7 @@
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <textField opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="749" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5VA-aN-3P4" customClass="QuickDismissPlaceholderTextField" customModule="lifebox" customModuleProvider="target">
+                        <textField opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="749" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5VA-aN-3P4" customClass="QuickDismissPlaceholderTextField" customModule="Billo" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="57" width="385" height="20"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
@@ -44,7 +45,8 @@
                     </subviews>
                 </stackView>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
                 <constraint firstItem="1Bq-d4-d5l" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="3Me-9k-nfl"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="1Bq-d4-d5l" secondAttribute="trailing" id="FKn-aF-il1"/>
@@ -52,7 +54,6 @@
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="1Bq-d4-d5l" secondAttribute="bottom" id="uqN-Vi-vrI"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
                 <outlet property="answerTextField" destination="5VA-aN-3P4" id="ouv-eJ-kTG"/>
                 <outlet property="errorLabel" destination="2Yz-Pz-6b7" id="37i-Au-ahd"/>
@@ -62,4 +63,9 @@
             <point key="canvasLocation" x="146.40000000000001" y="-121.4392803598201"/>
         </view>
     </objects>
+    <resources>
+        <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
