--- a/Depo/Depo/Presentation/SupportFormController/ProfilePhoneEnterView.xib
+++ b/Depo/Depo/Presentation/SupportFormController/ProfilePhoneEnterView.xib
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ProfilePhoneEnterView" customModule="lifebox" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ProfilePhoneEnterView" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="codeTextField" destination="BYD-sI-gkX" id="jug-QE-yKu"/>
                 <outlet property="contentView" destination="Ev9-8J-dhu" id="zfr-4b-aZL"/>
@@ -46,23 +45,21 @@
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IG7-kw-sF2">
                                     <rect key="frame" x="0.0" y="53" width="413" height="32"/>
                                     <subviews>
-                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BYD-sI-gkX" customClass="UnderlineTextField" customModule="lifebox" customModuleProvider="target">
+                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BYD-sI-gkX" customClass="UnderlineTextField" customModule="Billo" customModuleProvider="target">
                                             <rect key="frame" x="0.0" y="0.0" width="80" height="32"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="80" id="SLS-za-x7c"/>
                                             </constraints>
-                                            <nil key="textColor"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <textInputTraits key="textInputTraits"/>
                                         </textField>
-                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YQq-mI-FHn" customClass="QuickDismissPlaceholderTextField" customModule="lifebox" customModuleProvider="target">
+                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YQq-mI-FHn" customClass="QuickDismissPlaceholderTextField" customModule="Billo" customModuleProvider="target">
                                             <rect key="frame" x="98" y="0.0" width="315" height="32"/>
-                                            <nil key="textColor"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <textInputTraits key="textInputTraits"/>
                                         </textField>
                                     </subviews>
-                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="backgroundColor" name="primaryBackground"/>
                                     <constraints>
                                         <constraint firstItem="YQq-mI-FHn" firstAttribute="leading" secondItem="BYD-sI-gkX" secondAttribute="trailing" constant="18" id="P7B-mK-1mW"/>
                                         <constraint firstAttribute="trailing" secondItem="YQq-mI-FHn" secondAttribute="trailing" id="Z0E-vV-vuk"/>
@@ -77,7 +74,7 @@
                             </subviews>
                         </stackView>
                     </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" name="primaryBackground"/>
                     <constraints>
                         <constraint firstItem="V4F-7E-ZZm" firstAttribute="top" secondItem="Ev9-8J-dhu" secondAttribute="top" id="Ndf-uY-gCs"/>
                         <constraint firstAttribute="trailing" secondItem="V4F-7E-ZZm" secondAttribute="trailing" id="Zc1-bG-kiP"/>
@@ -86,7 +83,8 @@
                     </constraints>
                 </view>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
                 <constraint firstItem="Ev9-8J-dhu" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="6yZ-4Z-jGa"/>
                 <constraint firstItem="Ev9-8J-dhu" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="8SK-U5-GEX"/>
@@ -94,8 +92,12 @@
                 <constraint firstItem="Ev9-8J-dhu" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="w02-3g-N3P"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <point key="canvasLocation" x="205.59999999999999" y="-88.605697151424295"/>
         </view>
     </objects>
+    <resources>
+        <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
