--- a/Depo/Depo/Presentation/UserStories/Settings/ChangePassword/CaptchaView.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/ChangePassword/CaptchaView.xib
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CaptchaView" customModule="lifebox" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CaptchaView" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="captchaAnswerTextField" destination="25l-fN-bcD" id="ZvL-Cy-lXE"/>
                 <outlet property="captchaImageView" destination="kWg-Vf-Rlr" id="KGs-Nd-rh1"/>
@@ -59,7 +60,7 @@
                                     </connections>
                                 </button>
                             </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="backgroundColor" name="primaryBackground"/>
                             <constraints>
                                 <constraint firstItem="F9F-BL-tyJ" firstAttribute="leading" secondItem="3h7-gb-EgQ" secondAttribute="leading" id="1hp-Vs-hF3"/>
                                 <constraint firstItem="e7k-Vf-1iy" firstAttribute="top" secondItem="3h7-gb-EgQ" secondAttribute="top" id="72k-CN-A4m"/>
@@ -85,7 +86,7 @@
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="25l-fN-bcD" customClass="QuickDismissPlaceholderTextField" customModule="lifebox" customModuleProvider="target">
+                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="25l-fN-bcD" customClass="QuickDismissPlaceholderTextField" customModule="Billo" customModuleProvider="target">
                                     <rect key="frame" x="0.0" y="34" width="358" height="34"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="34" id="qWy-9n-9ir"/>
@@ -97,13 +98,13 @@
                         </stackView>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6WV-XE-0Ht">
                             <rect key="frame" x="0.0" y="143.5" width="358" height="0.5"/>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="backgroundColor" name="primaryBackground"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="0.5" id="FJl-dj-bOD"/>
                             </constraints>
                         </view>
                     </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" name="primaryBackground"/>
                     <constraints>
                         <constraint firstItem="0fs-JI-gHt" firstAttribute="top" secondItem="3h7-gb-EgQ" secondAttribute="bottom" constant="4" id="4Uc-j4-xeq"/>
                         <constraint firstAttribute="bottom" secondItem="0fs-JI-gHt" secondAttribute="bottom" constant="4" id="7Te-ci-mZp"/>
@@ -118,6 +119,7 @@
                     </constraints>
                 </view>
             </subviews>
+            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="Jt2-sq-4mO" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="MQT-h7-Rvc"/>
@@ -126,12 +128,14 @@
                 <constraint firstAttribute="trailing" secondItem="Jt2-sq-4mO" secondAttribute="trailing" id="xQC-RL-jcU"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <point key="canvasLocation" x="152" y="-81.859070464767626"/>
         </view>
     </objects>
     <resources>
         <image name="ic_refresh" width="32" height="32"/>
         <image name="ic_sound" width="32" height="32"/>
+        <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
