--- a/Depo/Depo/Presentation/UserStories/Settings/ChangePassword/ChangePasswordController.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/ChangePassword/ChangePasswordController.xib
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina3_5" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina3_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ChangePasswordController" customModule="lifebox" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ChangePasswordController" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="captchaView" destination="b5P-p0-Y6m" id="lkZ-U5-nm1"/>
                 <outlet property="passwordsStackView" destination="L8z-UI-Uaw" id="8go-jb-knD"/>
@@ -32,12 +31,12 @@
                                 <stackView opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="264" placeholderIntrinsicHeight="209" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="L8z-UI-Uaw">
                                     <rect key="frame" x="28" y="20" width="273" height="209"/>
                                 </stackView>
-                                <view contentMode="scaleToFill" placeholderIntrinsicWidth="289" placeholderIntrinsicHeight="164.5" translatesAutoresizingMaskIntoConstraints="NO" id="b5P-p0-Y6m" customClass="CaptchaView" customModule="lifebox" customModuleProvider="target">
+                                <view contentMode="scaleToFill" placeholderIntrinsicWidth="289" placeholderIntrinsicHeight="164.5" translatesAutoresizingMaskIntoConstraints="NO" id="b5P-p0-Y6m" customClass="CaptchaView" customModule="Billo" customModuleProvider="target">
                                     <rect key="frame" x="28" y="237" width="273" height="164.5"/>
-                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="backgroundColor" name="primaryBackground"/>
                                 </view>
                             </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="backgroundColor" name="primaryBackground"/>
                             <constraints>
                                 <constraint firstItem="L8z-UI-Uaw" firstAttribute="top" secondItem="i3h-EH-0sJ" secondAttribute="top" constant="20" id="0dP-oX-oFn"/>
                                 <constraint firstItem="b5P-p0-Y6m" firstAttribute="leading" secondItem="i3h-EH-0sJ" secondAttribute="leading" constant="28" id="BlJ-C5-PJG"/>
@@ -59,16 +58,21 @@
                     </constraints>
                 </scrollView>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="Ubg-9b-2eM" secondAttribute="bottom" id="99b-Eq-V7M" customClass="KeyboardLayoutConstraint" customModule="lifebox" customModuleProvider="target"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="Ubg-9b-2eM" secondAttribute="bottom" id="99b-Eq-V7M" customClass="KeyboardLayoutConstraint" customModule="Billo" customModuleProvider="target"/>
                 <constraint firstItem="Ubg-9b-2eM" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="S21-4u-VYp"/>
                 <constraint firstAttribute="trailing" secondItem="Ubg-9b-2eM" secondAttribute="trailing" id="eZZ-X3-sNL"/>
                 <constraint firstItem="Ubg-9b-2eM" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="vu4-wQ-BNH"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="128.4375" y="148.75"/>
         </view>
     </objects>
+    <resources>
+        <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
