--- a/Depo/Depo/Presentation/UserStories/Settings/ChangePassword/PasswordView.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/ChangePassword/PasswordView.xib
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="PasswordView" customModule="LifeTech_lifedrive" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="PasswordView" customModule="Billo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="363" height="106"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -49,7 +50,7 @@
                                         </textField>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZJp-rE-9gp" userLabel="line View">
                                             <rect key="frame" x="0.0" y="97.5" width="363" height="0.5"/>
-                                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <color key="backgroundColor" name="itemSeperator"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="0.5" id="G4C-xV-var"/>
                                             </constraints>
@@ -67,7 +68,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
-                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="backgroundColor" name="primaryBackground"/>
                                     <constraints>
                                         <constraint firstItem="gRm-FI-Y5Q" firstAttribute="leading" secondItem="0vN-dV-zmj" secondAttribute="trailing" constant="8" id="61W-Gt-ahO"/>
                                         <constraint firstItem="ZJp-rE-9gp" firstAttribute="leading" secondItem="ZK4-AL-aVD" secondAttribute="leading" id="726-gO-G2s"/>
@@ -90,7 +91,7 @@
                                     </constraints>
                                 </view>
                             </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="backgroundColor" name="primaryBackground"/>
                             <constraints>
                                 <constraint firstAttribute="bottom" secondItem="ZK4-AL-aVD" secondAttribute="bottom" constant="8" id="Gns-9Y-Gy1"/>
                                 <constraint firstItem="ZK4-AL-aVD" firstAttribute="top" secondItem="Y2P-iW-5eQ" secondAttribute="top" id="UQP-6E-rls"/>
@@ -101,6 +102,7 @@
                     </subviews>
                 </stackView>
             </subviews>
+            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="0Xx-x8-KLH" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="8DL-td-RRy"/>
@@ -109,7 +111,6 @@
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="0Xx-x8-KLH" secondAttribute="bottom" id="ts7-Aw-pqc"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
                 <outlet property="errorLabel" destination="PLu-xu-SMK" id="E9W-Fh-7Qj"/>
                 <outlet property="lineView" destination="ZJp-rE-9gp" id="dqj-CB-UEL"/>
@@ -123,5 +124,11 @@
     </objects>
     <resources>
         <image name="ic_eye_show" width="24" height="24"/>
+        <namedColor name="itemSeperator">
+            <color red="0.91699999570846558" green="0.91699999570846558" blue="0.91699999570846558" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
