--- a/Depo/Depo/Presentation/UserStories/Settings/SetSecurityQuestionViewController/SecurityQuestionView.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/SetSecurityQuestionViewController/SecurityQuestionView.xib
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="SecurityQuestionView" customModule="lifebox" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="SecurityQuestionView" customModule="Billo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="407" height="82"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -64,7 +63,8 @@
                     </constraints>
                 </stackView>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="qdU-BT-m3J" secondAttribute="trailing" id="4FX-Uh-WFN"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="qdU-BT-m3J" secondAttribute="bottom" id="Eq4-gb-qyx"/>
@@ -72,17 +72,19 @@
                 <constraint firstItem="qdU-BT-m3J" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="rda-25-elY"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
                 <outlet property="arrowButton" destination="rS0-An-flJ" id="2EE-eG-dxQ"/>
                 <outlet property="descriptionLabel" destination="tot-9W-MOP" id="ubO-8b-Lei"/>
                 <outlet property="lineView" destination="ztt-64-C6D" id="ILj-HX-gqO"/>
                 <outlet property="titleLabel" destination="5HO-NM-NK8" id="mfu-R7-Ub9"/>
             </connections>
-            <point key="canvasLocation" x="-9" y="-100"/>
+            <point key="canvasLocation" x="-10.4" y="-100.74962518740631"/>
         </view>
     </objects>
     <resources>
         <image name="arrow_right" width="5" height="8"/>
+        <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
