--- a/Depo/Depo/Presentation/UserStories/Settings/UserProfile/View/UserProfileViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/UserProfile/View/UserProfileViewController.xib
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina3_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -30,7 +31,7 @@
                                     <rect key="frame" x="20" y="20" width="280" height="102"/>
                                 </stackView>
                             </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="backgroundColor" name="primaryBackground"/>
                             <constraints>
                                 <constraint firstAttribute="trailing" secondItem="UHN-vi-dpd" secondAttribute="trailing" constant="20" id="UZq-d9-3D6"/>
                                 <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="UHN-vi-dpd" secondAttribute="bottom" constant="20" id="jzY-jB-T0K"/>
@@ -49,15 +50,20 @@
                     </constraints>
                 </scrollView>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="jTK-8x-AN9" secondAttribute="bottom" id="3tl-VG-Gse" customClass="KeyboardLayoutConstraint" customModule="lifebox" customModuleProvider="target"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="jTK-8x-AN9" secondAttribute="bottom" id="3tl-VG-Gse" customClass="KeyboardLayoutConstraint" customModule="Billo" customModuleProvider="target"/>
                 <constraint firstItem="jTK-8x-AN9" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="TCr-r4-4VR"/>
                 <constraint firstAttribute="trailing" secondItem="jTK-8x-AN9" secondAttribute="trailing" id="aqo-U8-Vlc"/>
                 <constraint firstItem="jTK-8x-AN9" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="mmF-Ek-7is"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="139" y="101"/>
         </view>
     </objects>
+    <resources>
+        <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
