--- a/Depo/Depo/Presentation/UserStories/Start/Registration/View/Terms/RegistrationTermsViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Start/Registration/View/Terms/RegistrationTermsViewController.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -35,7 +36,7 @@
                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                         </textView>
                     </subviews>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <color key="backgroundColor" name="primaryBackground"/>
                     <constraints>
                         <constraint firstItem="eoV-u3-q96" firstAttribute="leading" secondItem="ySj-3B-uMO" secondAttribute="leading" constant="10" id="Bez-Lw-AzZ"/>
                         <constraint firstItem="eoV-u3-q96" firstAttribute="top" secondItem="ySj-3B-uMO" secondAttribute="top" constant="10" id="DKe-0S-Mzo"/>
@@ -44,7 +45,7 @@
                     </constraints>
                 </view>
             </subviews>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
                 <constraint firstItem="vT6-rW-9Ye" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="95h-ee-wCK"/>
                 <constraint firstAttribute="bottom" secondItem="ySj-3B-uMO" secondAttribute="bottom" id="DZV-bo-5hT"/>
@@ -59,6 +60,9 @@
         </view>
     </objects>
     <resources>
+        <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
